--- a/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/Resources/ORAS.css
+++ b/Stream Tool/Overlays/Omega Ruby and Alpha Sapphire/Resources/ORAS.css
@@ -1,6 +1,14 @@
 @font-face {
-    font-family: "Roboto-Condensed";
-    src: url('../../../Resources/Fonts/RobotoCondensed-VariableFont_wght.ttf');
+    font-family: "FontBold";
+    src: url('../../../Resources/Fonts/RobotoCondensed-Bold.ttf');
+}
+@font-face {
+    font-family: "FontMain";
+    src: url('../../../Resources/Fonts/RobotoCondensed-SemiBold.ttf');
+}
+@font-face {
+    font-family: "FontMedium";
+    src: url('../../../Resources/Fonts/RobotoCondensed-Medium.ttf');
 }
 
 
@@ -12,7 +20,7 @@ html, body {
     padding: 0;
     margin: 0;
     font-weight: 625;
-    font-family: "Roboto-Condensed";
+    font-family: "FontMain";
 }
 
 #content {
@@ -125,7 +133,7 @@ html, body {
 .statNumber {
     color: #f8f8f8;
     font-size: 22px;
-    font-weight: 700;
+    font-family: "FontBold";
     text-shadow: 0px 0px 5px black;
 }
 
@@ -139,7 +147,6 @@ html, body {
     left: 52px;
     width: 373px;
     font-size: 19px;
-    font-weight: 500;
     color: white;
     text-shadow: 0px 0px 5px black;
     display: flex;
@@ -167,6 +174,7 @@ html, body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    font-family: "FontMedium";
 }
 
 .vsWildPokeTypeDiv {
@@ -231,7 +239,6 @@ html, body {
     width: 100%;
     padding: 0px 50px 10px 50px;
     font-size: 18px;
-    font-weight: 600;
 }
   
 .vsWildStat {
@@ -429,7 +436,6 @@ html, body {
     display: flex;
     gap: 6px;
     font-size: 22px;
-    font-weight: 550;
     font-style: oblique 15deg;
     padding-left: 5px;
     margin-top: -3px;
@@ -621,7 +627,7 @@ html, body {
     gap: 3px;
     filter: drop-shadow(0px 0px 2px black);
     font-size: 16px;
-    font-weight: 700;
+    font-family: "FontBold";
     padding: 3px 2px 2px 0px;
 }
 
@@ -650,7 +656,6 @@ html, body {
     font-size: 20px;
     align-items: center;
     margin: -2px 0 0 5px;
-    font-weight: 600;
 }
 
 .activeItemDiv {
@@ -715,7 +720,7 @@ html, body {
     text-wrap: nowrap;
     color: #b6b6b6;
     font-size: 16px;
-    font-weight: 700;
+    font-family: "FontBold";
 }
 
 /** Active Moves */
@@ -830,7 +835,7 @@ html, body {
 
 .standbyName {
     font-size: 22px;
-    font-weight: 500;
+    font-family: "FontMedium";
     text-shadow: 0px 0px 5px black;
     text-wrap: nowrap;
 }
@@ -877,7 +882,7 @@ html, body {
 }
 #enemyNameIntroTitle {
     font-size: 56px;
-    font-weight: 500;
+    font-family: "FontMedium";
     -webkit-text-stroke: 3px rgb(129, 54, 54);
     paint-order: stroke fill;
     margin: 0px 10px;
